force-app/main/default/objects/VTXY_InvoiceStaging__c/VTXY_InvoiceStaging__c.object-meta.xml
<CustomObject>
    <label>Invoice Staging</label>
    <nameField>
        <label>Invoice Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>