force-app/main/default/objects/VTXY_InvoiceStaging__c/fields/Billing_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sync_Status__c</fullName>
    <label>Billing_Sync_Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Ignored.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>