force-app/main/default/objects/VTXY_InvoiceStaging__c/fields/External_Invoice_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_Line_Id__c</fullName>
    <label>External_Invoice_Line_Id</label>
    <length>23</length>
    <type>Text</type>
</CustomField>